--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>H4X0R</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata:700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -13,16 +13,18 @@
     <section class="page-header">
       <h1 class="project-name">H4X0R</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
-      <a href="https://github.com/milkey-mouse/h4x0r" class="btn">View on GitHub</a>
-      <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/milkey-mouse/h4x0r/tarball/master" class="btn">Download .tar.gz</a>
+      <div class="btn">
+        <img src="assets/github.png">
+        <a href="https://github.com/milkey-mouse/h4x0r">View on GitHub</a>
+      </div>
+      <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">Play the game</a>
     </section>
 
     <section class="main-content">
       <h1>
 <a id="h4x0r" class="anchor" href="#h4x0r" aria-hidden="true"><span class="octicon octicon-link"></span></a>h4x0r</h1>
 
-<p>A game about what the NCIS writers think hacking is.</p>
+<p>A game about what some people seem to think hacking is.</p>
 
 <h1>
 <a id="copyright" class="anchor" href="#copyright" aria-hidden="true"><span class="octicon octicon-link"></span></a>Copyright</h1>
