--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">H4X0R</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
       <div class="btn">
-        <img src="assets/github.png">
+        <img class="gh-logo" src="assets/github.png">
         <a href="https://github.com/milkey-mouse/h4x0r">View on GitHub</a>
       </div>
       <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">Play the game</a>
