Added controller icon

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
       <h1 class="project-name">H4X0R</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
       <div class="btn">
-        <img class="gh-logo" src="assets/github.png">
-        <a class="btn-link" href="https://github.com/milkey-mouse/h4x0r">View on GitHub</a>
+        <img src="assets/github.png" class="gh-logo">
+        <a href="https://github.com/milkey-mouse/h4x0r" class="btn-link">View on GitHub</a>
       </div>
-      <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">Play the game</a>
+      <div class="btn">
+        <img class="gh-logo" src="assets/controller.png">
+        <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn-link">Play the game</a>
+      </div>
     </section>
 
     <section class="main-content">
