--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <section class="page-header">
       <h1 class="project-name">H4X0R</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
-      <div class="btn">
+      <a href="https://github.com/milkey-mouse/h4x0r" class="btn">
         <img src="assets/github.png" class="gh-logo">
-        <a href="https://github.com/milkey-mouse/h4x0r" class="btn-link">View on GitHub</a>
-      </div>
-      <div class="btn">
-        <img class="gh-logo" src="assets/controller.png">
-        <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn-link">Play the game</a>
-      </div>
+        <div class="btn-link">View on GitHub</div>
+      </a>
+      <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">
+        <img src="assets/controller.png" class="gh-logo">
+        <div class="btn-link">Play the game</div>
+      </a>
     </section>
 
     <section class="main-content">
