--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <h1 class="project-name">H4X0R</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
       <a href="https://github.com/milkey-mouse/h4x0r" class="btn">
-        <img src="assets/github.png" class="gh-logo">
+        <img src="assets/github.png" alt="" class="gh-logo">
         <div class="btn-link">View on GitHub</div>
       </a>
       <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">
-        <img src="assets/controller.png" class="gh-logo">
+        <img src="assets/controller.png" alt="" class="gh-logo">
         <div class="btn-link">Play the game</div>
       </a>
     </section>
