Added message about game not being ready
On play button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="assets/github.png" alt="" class="gh-logo">
         <div class="btn-link">View on GitHub</div>
       </a>
-      <a href="https://github.com/milkey-mouse/h4x0r/zipball/master" class="btn">
+      <a href="http://ducksarethebest.com/" class="btn">
         <img src="assets/controller.png" alt="" class="gh-logo">
-        <div class="btn-link">Play the game</div>
+        <div class="btn-link"><s>Play the game</s>Sorry, not ready yet!</div>
       </a>
     </section>
 
