--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">H4X0R</h1>
+      <img src="assets/logo.png" alt="H4X0R" class="project-name">
       <h1 class="teamivan">By Team Ivan</h1>
       <h2 class="project-tagline">A game about what some people seem to think hacking is.</h2>
       <a href="https://github.com/milkey-mouse/h4x0r" class="btn">
