Finished preliminary webpage
I hope

--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
 
     <section class="main-content">
       <h1>
-<a id="h4x0r" class="anchor" href="#h4x0r" aria-hidden="true"><span class="octicon octicon-link"></span></a>h4x0r</h1>
+<a id="h4x0r" class="anchor" href="#h4x0r" aria-hidden="true"><span class="octicon octicon-link"></span></a>About H4X0R</h1>
 
-<p>A game about what some people seem to think hacking is.</p>
+From the creators of The Legend of Adlez comes a new Team Ivan game, H4X0R. It's not a game about hacking, but what everybody thinks hacking is. For example, if you're a CSI writer, you probably think that hacking consists of multiple people mashing the same keyboard at the same time. And as we found out, that's fun. Case in point: <a href="http://geektyper.com/">GeekTyper</a>. So we're making a 2-player game where you have to research on a fake Internet to learn how to "hack" and defeat your opponent.
 
 <h1>
-<a id="copyright" class="anchor" href="#copyright" aria-hidden="true"><span class="octicon octicon-link"></span></a>Copyright</h1>
+<a id="story" class="anchor" href="#story" aria-hidden="true"><span class="octicon octicon-link"></span></a>Story</h1>
 
-<p>Since the original game of H4X0R was made at Digipen, where they take the copyrights of things you make there, this repository can only host the binaries of the game and the server implementation, which is completely separate.
-The server implementation is MIT licensed.</p>
+Here's the intro text that sums up the "story", if you can call it that, pretty succinctly:
+
+H4X0R is not a game about hacking.
+It's a game about what people think hacking is.
+Trust me; if hacking was anything like in movies,
+I would be too busy hacking the Pentagon to make this game.
+
+You, xXxGenericCoDPlayer42xXx, have heard word of these "hax".
+You must scour the Internet to absorb its vast knowledge.
+With enough patience and skill to defeat all that stop you,
+you too will become a leet haxor.
+
+<h1>
+<a id="copyright" class="anchor" href="#copyright" aria-hidden="true"><span class="octicon octicon-link"></span></a>Copyright and stuff</h1>
+
+<p>The original game of H4X0R was made at DigiPen and was more of a proof-of-concept. Since the code for the old Java version is owned by them, I can't put it on here. However, I can start from scratch remaking the game with <a href="http://phaser.io/">Phaser</a> reusing the assets from the pre-alpha made in Java. The new version is made in HTML5, so if you can view this page, you can probably play it. It has a Python server for the multiplayer (Keep in mind that most of the new stuff doesn't exist yet, but soon...)</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/milkey-mouse/h4x0r">H4X0R</a> is a <a href="http://team-ivan.com/">Team Ivan</a> game made by <a href="https://github.com/milkey-mouse">Milkey Mouse</a>.</span>
