Fixed offset of title text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <div class="project-name">
-        <img src="assets/logo.png" alt="H4X0R">
+        <img src="assets/logo.png" class="offset-logo" alt="H4X0R">
         <img src="assets/cursor.gif" class="cursor" alt="">
       </div>
       <h1 class="teamivan">By Team Ivan</h1>
