Finished intro And added a bunch of easter eggs. I think the egg-to-game ration might be a bit high...

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>H4X0R</title>
-		<script src="js/phaser.min.js"></script>
+		<script src="js/phaser-no-physics.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
-	<body>
+	<body bgcolor="1337h4x0r" style="margin: 0px;">
 		<div id="content"></div>
 	</body>
 </html>
