Made mobile screen a level, added skip button
Skip button only appears after preloading has completed

--- a/bin/index.html
+++ b/bin/index.html
@@ -5,7 +5,7 @@
 		<script src="js/phaser-no-physics.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
-	<body bgcolor="1337h4x0r" style="margin: 0px;">
+	<body style="margin: 0px;background-color: black;">
 		<div id="content"></div>
 	</body>
 </html>
