Upgraded to Phaser 2.4.4
With my bugfix in it! Literally one character, but still!

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>H4X0R</title>
-		<script src="js/phaser-no-physics.min.js"></script>
+		<script src="js/phaser.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
 	<body style="margin: 0px;background-color: black;">
