--- a/bin/index.html
+++ b/bin/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>H4X0R</title>
 		<script src="js/phaser.min.js"></script>
+		<script src="js/bops.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
 	<body style="margin: 0px;background-color: black;">
