--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>H4X0R</title>
-		<script src="js/phaser.min.js"></script>
+		<script src="js/phaser.js"></script>
 		<script src="js/bops.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
