--- a/bin/index.html
+++ b/bin/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>H4X0R</title>
-		<script src="js/phaser.js"></script>
+		<script src="js/phaser.min.js"></script>
 		<script src="js/bops.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
 	<body style="margin: 0px;background-color: black;">
-		<div id="content"></div>
+		<div id="content" style="  image-rendering: optimizeSpeed;image-rendering: crisp-edges;image-rendering: -moz-crisp-edges;image-rendering: -o-crisp-edges;image-rendering: -webkit-optimize-contrast;image-rendering: optimize-contrast;-ms-interpolation-mode: nearest-neighbor;"></div>
 	</body>
 </html>
